# MilkDrop3-linux-port

./: .gitignore  BUILD.md  CMakeLists.txt
cmake/: kissfft-CMakeLists.txt
docs/analysis/: milkdrop3-structure.md
docs/superpowers/plans/: 2026-05-12-eel2-preset-integration.md  2026-05-12-milkdrop3-linux-port.md  2026-05-12-phase-4-5-ui-reliability-stability.md  2026-05-12-phase-4-audio-callbacks.md  2026-05-12-phase-4-fft-integration.md  2026-05-12-phase-4-visualization-core.md
docs/superpowers/specs/: 2026-05-12-milkdrop3-linux-port-design.md
include/: milkdrop_compat.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp
src/audio/: audio_analyzer.cpp  audio_analyzer.h  factory.cpp  pipewire_input.cpp  pipewire_input.h  pulseaudio_input.cpp  pulseaudio_input.h
src/core/: CMakeLists.txt  performance.h  performance_baseline.cpp  performance_baseline.h  profiler.cpp  profiler.h  visualization.cpp  visualization.h
src/core/expression/: CMakeLists.txt  expression_evaluator.cpp  expression_evaluator.h
src/core/expression/eel2/: ns-eel-addfuncs.h  ns-eel-int.h  ns-eel.h  nseel-eval.c
src/core/preset/: CMakeLists.txt  preset_parser.cpp  preset_parser.h  preset_types.h  preset_validator.cpp  preset_validator.h
src/graphics/: factory.cpp  opengl_device.cpp  opengl_device.h  shader.cpp  shader.h
src/platform/: audio.h  config.cpp  config.h  graphics.h  types.h  window.h
src/ui/: CMakeLists.txt  display_manager.cpp  display_manager.h  preset_browser.cpp  preset_browser.h  preset_manager.cpp  preset_manager.h  visual_feedback.cpp  visual_feedback.h
src/window/: factory.cpp  glfw_window.cpp  glfw_window.h  input.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_profiler.cpp
tests/core/preset/: CMakeLists.txt  test_preset_parser.cpp  test_preset_validator.cpp
tests/integration/: CMakeLists.txt  test_application.cpp  test_preset_library.cpp  test_real_presets.cpp
tests/performance/: CMakeLists.txt  baseline.json  test_e2e_performance.cpp  test_regression.cpp
tests/stability/: CMakeLists.txt  test_crash_resilience.cpp
